# youtube-transcription

./: .gitignore  README.md  app.py  pyproject.toml
